--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 	"homepage": "https://github.com/Pedneri1/precodahora-api",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^0.21.1",
-		"node-html-parser": "^1.2.16",
+		"axios": "^1.6.2",
+		"node-html-parser": "^6.1.11",
 		"querystring": "^0.2.0",
-		"tough-cookie": "^4.0.0",
-		"useragent-from-seed": "^1.0.1",
-		"xo": "^0.33.0"
+		"random-useragent": "^0.5.0",
+		"tough-cookie": "^4.1.3",
+		"xo": "^0.56.0"
 	},
 	"devDependencies": {
 		"ava": "^3.8.1"
